--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,21 @@ body {
 .logo-velada {
   filter: drop-shadow(0px 0px 50px rgba(0, 0, 0, 1));
 }
+
+/* SPONSORS */
+.sponsor {
+    background: linear-gradient(#ffffff1a 0%, #0000 100%);
+}
+
+.sponsor:hover {
+  background: linear-gradient(#fff3 0%,#0000)
+}
+
+.sponsor:hover img {
+  transform: scale(1.1);
+}
+
+.infojobs-logo:hover g, .infojobs-logo:hover path {
+  color: var(--color-accent);
+  fill: var(--color-accent);
+}
